--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Página de Prueba</title>
 </head>
 <body>
-    <h1>¡Hola, este es un archivo de prueba!</h1>
+    <h1>este es un archivo de prueba!</h1>
     <p>Este es un contenido subido desde mi computadora y desplegado en Plesk.</p>
 </body>
 </html>
